--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="libs/jasperreports-3.7.1.jar"/>
 	<classpathentry kind="lib" path="libs/vraptor-3.3.1.jar"/>
 	<classpathentry kind="lib" path="libs/javax.servlet.jar"/>
+	<classpathentry kind="lib" path="libs/guava-r07.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
