--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@
 	</build>
 
 	<dependencies>
+	
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>3.14</version>
+		</dependency>
 
 		<dependency>
 			<groupId>br.com.caelum</groupId>
